# egghead-rust-cli

./: Cargo.toml  README.md
src/: main.rs  write.rs
tests/: integration.rs
