[package]
name = "cli-digital-garden"
version = "0.1.0"
authors = ["Tyler Crammond <tylerchc92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garden"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.0"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.4"
