[package]
name = "digital-garden"
version = "0.1.0"
authors = ["Tyler Crammond <tylerchc92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# N.B. `bin` is an array as you can have multiple binaries, but there can only be one library `lib`.
[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.0"
directories = "4.0.1"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.4"
